# DreamerEpicCycle

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DreamerEpicCycle.sln  DreamerEpicCycle.vcxproj  DreamerEpicCycle.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
Graphics/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Graphics.sln  Graphics.vcxproj  Graphics.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Shaders.vcxproj  Shaders.vcxproj.filters  cmake_install.cmake  vk_engine.h
Graphics/shared/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  camera.cpp  camera.h  meshes.h  shared.vcxproj  shared.vcxproj.filters  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_pipelines.cpp  vk_types.h  vkguide_shared.vcxproj  vkguide_shared.vcxproj.filters
Graphics/src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  src.vcxproj  src.vcxproj.filters  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
Interaction/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Interaction.sln  Interaction.vcxproj  Interaction.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Interaction/Character/: CharacterComponents.h  Characters.h
Interaction/Civilisation/: CivilisationComponents.h
Interaction/Command/: Unit.h  UnitComponents.h
Interaction/Interaction.dir/Debug/Interaction.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Interaction/Items/: ItemComponents.h  ItemModule.h
Interaction/Items/ItemConfig/: ItemConfig.h  ItemConfigComponents.h
Interaction/Items/ItemGeneration/: ItemGeneration.h  ItemGenerationAffixes.h  ItemGenerationMaterial.h  ItemGenerationParts.h  ItemGenerationQuality.h  ItemGenerationStats.h  ItemGenerationTags.cpp
Interaction/Universe/Area/: ChunkComponents.h  ChunkCreation.h  RegionComponents.h  RegionCreation.h  VoxelComponents.h
Interaction/Universe/Galaxy/: GalaxyComponentConfig.h  GalaxyComponents.h  GalaxySystems.h
Interaction/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Interaction.vcxproj  Interaction.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  src.sln
Interaction/src/Character/: CharacterComponents.h
Interaction/src/Civilisation/: CivilisationModule.h
Interaction/src/Command/: Unit.cpp
Interaction/src/Helpers/: MathHelpers.cpp
Interaction/src/Items/: ItemComponents.h
Interaction/src/Items/ItemConfig/: ItemConfigModule.h
Interaction/src/Items/ItemConfig/ItemJSON/: ItemRarityCommon.JSON
Interaction/src/Items/ItemGeneration/: ItemGenerationBase.h  ItemGenerationManufacturer.h  ItemGenerationModule.h  ItemGenerationRarity.h  ItemGenerationSeed.h  ItemGenerationStatCompile.h  ItemGenerationTags.h
Interaction/src/Universe/Area/: ChunkComponents.h  RegionCreation.cpp  RegionCreation.h  VoxelComponents.h
assets/: Legionary.glb  Legionary.mtl
binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  DreamerEpicCycle.sln  DreamerEpicCycle.vcxproj  DreamerEpicCycle.vcxproj.filters  DreamerEpicCycleInteraction.vcxproj  RaptorApp.vcxproj  RaptorApp.vcxproj.filters  RaptorExternal.vcxproj  RaptorExternal.vcxproj.filters  RaptorFoundation.vcxproj  RaptorFoundation.vcxproj.filters  RaptorGraphics.vcxproj  RaptorGraphics.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui.ini  interaction.vcxproj  interaction.vcxproj.filters
source/graphics/: CMakeLists.txt  asynchronous_loader.cpp  asynchronous_loader.hpp  command_buffer.cpp  command_buffer.hpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gltf_scene.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  main.cpp  obj_scene.cpp  obj_scene.hpp  raptor_imgui.cpp  raptor_imgui.hpp  render_resources_loader.cpp  render_resources_loader.hpp  render_scene.cpp  render_scene.hpp  renderer.cpp  renderer.hpp  scene_graph.cpp  scene_graph.hpp  spirv_parser.cpp  spirv_parser.hpp
source/interaction/: CMakeLists.txt
source/interaction/Character/: CharacterComponents.h  Characters.h
source/interaction/Civilisation/: CivilisationComponents.h
source/interaction/Command/: Unit.h  UnitComponents.h
source/interaction/Items/: ItemComponents.h  ItemModule.h
source/interaction/Items/ItemConfig/: ItemConfig.h  ItemConfigComponents.h  ItemConfigModule.h
source/interaction/Items/ItemGeneration/: ItemGeneration.h  ItemGenerationAffixes.h  ItemGenerationBase.cpp  ItemGenerationBase.h  ItemGenerationManufacturer.h  ItemGenerationMaterial.h  ItemGenerationModule.h  ItemGenerationParts.h  ItemGenerationQuality.h  ItemGenerationRarity.h  ItemGenerationSeed.h  ItemGenerationStatCompile.h  ItemGenerationStats.h  ItemGenerationTags.h
source/interaction/Universe/Area/: ChunkComponents.h  ChunkCreation.h  RegionCreation.h  VoxelComponents.h
source/interaction/Universe/Galaxy/: GalaxyComponentConfig.h  GalaxyComponents.h  GalaxySystems.h
source/interaction/Universe/World/: BioneCreation.h
source/interaction/flecs/: CMakeLists.txt
source/interaction/flecs/flecs-components-geometry/include/: flecs_components_geometry.h
source/interaction/flecs/flecs-components-graphics/include/flecs-components-graphics/: bake_config.h
source/interaction/flecs/flecs-game/include/flecs-game/: bake_config.h
source/interaction/flecs/flecs-game/src/: light_controller.c
source/interaction/flecs/flecs-systems-physics/src/: octree.c
source/interaction/flecs/flecs-systems-transform/include/flecs-systems-transform/: bake_config.h
source/interaction/flecs/flecs-systems-transform/src/: main.c
src/: CMakeLists.txt  main.cpp
vulkan/: CMakeLists.txt  vk_engine.cpp
vulkan_shared/: CMakeLists.txt  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
(+251 files in other folders)
